# website-wasm

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
src/: main.rs  router.rs
src/components/: editor.rs  index.rs  mod.rs  navbar.rs
src/components/blog/: cta.rs  mod.rs
src/components/other/: icon_list.rs  mod.rs  particle_animation.rs
src/css/: input.css  output.css
src/pages/: index.rs
src/posts/: coming_soon.kml  mod.rs
src/routes/: contact.rs  cv.rs  cvold.rs  home.rs  index.rs  mod.rs
src/routes/blog/: mod.rs
src/routes/cv/: mod.rs  models.rs
src/routes/projects/: mod.rs  models.rs
