[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.84"
kml = {git = "https://github.com/KivalM/kml"}