[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
rand = { version = "0.8.5", default-features = false }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.84"
gloo-timers = "0.2.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "MouseEvent",
  "EventTarget",
  "HtmlDivElement",
  "TouchEvent",
  "DomTokenList",

  "TouchList",
  "Touch"
]



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
